--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\CURD.DAL\packages.config" />
+  <repository path="..\CURD.Service\packages.config" />
   <repository path="..\MVCDemoArticle\packages.config" />
 </repositories>
